--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.12
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.2
+  fl_chart: ^0.66.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
